force-app/main/default/objects/NRV10GridRevision__c/NRV10GridRevision__c.object-meta.xml
<CustomObject>
    <label>Révision de grille</label>
    <nameField>
        <label>Nom</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Révisions de grilles</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>