force-app/main/default/objects/NRV10GridRevision__c/fields/bonusGridRevision__c.field-meta.xml
<CustomField>
    <fullName>bonusGridRevision__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Révision du bonus de vente</label>
    <lookupFilter>
        <active>true</active>
        <errorMessage>La révision sélectionnée n&apos;est pas de type Bonus</errorMessage>
        <filterItems>
            <field>NRV10GridRevision__c.RecordType.DeveloperName</field>
            <operation>equals</operation>
            <value>bonus</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>NRV10GridRevision__c</referenceTo>
    <relationshipLabel>Révision de grille (Contrat de travail)</relationshipLabel>
    <relationshipName>Revision_de_grille_bonus</relationshipName>
    <type>Lookup</type>
</CustomField>