force-app/main/default/objects/NRV10GridRevision__c/fields/defaultRate__c.field-meta.xml
<CustomField>
    <fullName>defaultRate__c</fullName>
    <label>Taux par défaut</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>