force-app/main/default/objects/NRV10GridRevision__c/fields/discountGridRevision__c.field-meta.xml
<CustomField>
    <fullName>discountGridRevision__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Révision du coefficient de décote</label>
    <lookupFilter>
        <active>true</active>
        <errorMessage>La révision de grille doit être de type &quot;Coefficient de décote&quot;.</errorMessage>
        <filterItems>
            <field>NRV10GridRevision__c.RecordType.DeveloperName</field>
            <operation>equals</operation>
            <value>discountCommission</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>NRV10GridRevision__c</referenceTo>
    <relationshipLabel>Révision de grille (Contrat de travail)</relationshipLabel>
    <relationshipName>Revision_de_grille_coefficient_decote</relationshipName>
    <type>Lookup</type>
</CustomField>