force-app/main/default/objects/NRV10GridRevision__c/fields/endDate__c.field-meta.xml
<CustomField>
    <fullName>endDate__c</fullName>
    <description>Date de fin d&apos;application de la révision de grille</description>
    <label>Date de fin d&apos;application</label>
    <type>Date</type>
</CustomField>