force-app/main/default/objects/NRV10GridRevision__c/fields/malusGridRevision__c.field-meta.xml
<CustomField>
    <fullName>malusGridRevision__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Grille de révision dédiée au malus.</description>
    <label>Révision du malus de vente</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>NRV10GridRevision__c.RecordType.DeveloperName</field>
            <operation>equals</operation>
            <value>malus</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>NRV10GridRevision__c</referenceTo>
    <relationshipLabel>Révisions de grilles (Révision du bonus de vente)</relationshipLabel>
    <relationshipName>Revisions_de_grilles</relationshipName>
    <type>Lookup</type>
</CustomField>