force-app/main/default/objects/NRV10GridRevision__c/fields/salesGridRevision__c.field-meta.xml
<CustomField>
    <fullName>salesGridRevision__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Révision de la commission de vente</label>
    <lookupFilter>
        <active>true</active>
        <errorMessage>La révision de grille doit être du type &quot;Commission de vente&quot;.</errorMessage>
        <filterItems>
            <field>NRV10GridRevision__c.RecordType.DeveloperName</field>
            <operation>equals</operation>
            <value>salesCommission</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>NRV10GridRevision__c</referenceTo>
    <relationshipLabel>Révision de grille (Contrat de travail)</relationshipLabel>
    <relationshipName>Revision_de_grille_vente</relationshipName>
    <type>Lookup</type>
</CustomField>