force-app/main/default/objects/NRV10GridRevision__c/fields/startDate__c.field-meta.xml
<CustomField>
    <fullName>startDate__c</fullName>
    <description>Date de début d&apos;application de la révision de grille</description>
    <label>Date d&apos;application</label>
    <type>Date</type>
</CustomField>