force-app/main/default/objects/NRV10GridRevision__c/fields/teamGridRevision__c.field-meta.xml
<CustomField>
    <fullName>teamGridRevision__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Révision de la commission d&apos;équipe</label>
    <lookupFilter>
        <active>true</active>
        <errorMessage>La révision de grille doit être du type &quot;Commission d&apos;équipe&quot;.</errorMessage>
        <filterItems>
            <field>NRV10GridRevision__c.RecordType.DeveloperName</field>
            <operation>equals</operation>
            <value>teamCommission</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>NRV10GridRevision__c</referenceTo>
    <relationshipLabel>Révision de grille (Contrat de travail)</relationshipLabel>
    <relationshipName>Revision_de_grille_commission_equipe</relationshipName>
    <type>Lookup</type>
</CustomField>