force-app/main/default/objects/NRV10GridRevision__c/recordTypes/bonus.recordType-meta.xml
<RecordType>
    <fullName>bonus</fullName>
    <active>true</active>
    <label>Grille de Bonus</label>
</RecordType>