force-app/main/default/objects/NRV10GridRevision__c/recordTypes/discountCommission.recordType-meta.xml
<RecordType>
    <fullName>discountCommission</fullName>
    <active>true</active>
    <label>Grille de Decote</label>
</RecordType>