force-app/main/default/objects/NRV10GridRevision__c/recordTypes/malus.recordType-meta.xml
<RecordType>
    <fullName>malus</fullName>
    <active>true</active>
    <label>Grille de Malus</label>
</RecordType>