force-app/main/default/objects/NRV10GridRevision__c/recordTypes/salesCommission.recordType-meta.xml
<RecordType>
    <fullName>salesCommission</fullName>
    <active>true</active>
    <label>Grille de Commission vendeur</label>
</RecordType>