force-app/main/default/objects/NRV10GridRevision__c/recordTypes/teamCommission.recordType-meta.xml
<RecordType>
    <fullName>teamCommission</fullName>
    <active>true</active>
    <label>Grille de Commission equipe</label>
</RecordType>