force-app/main/default/objects/NRV10GridRevision__c/recordTypes/workingContract.recordType-meta.xml
<RecordType>
    <fullName>workingContract</fullName>
    <active>true</active>
    <label>Grille de Contrat de travail</label>
</RecordType>