force-app/main/default/objects/NRV10GridRevision__c/validationRules/VR_K3_GridRevision_DateDeDebut.validationRule-meta.xml
<ValidationRule>
    <fullName>VR_K3_GridRevision_DateDeDebut</fullName>
    <active>true</active>
    <description>Vérifie que la date de début est renseignée et postérieure ou égale à la date de&apos;ouverture de la grille de rémunération.</description>
    <errorConditionFormula>AND(!$User.ByPassValidationRule__c, ISBLANK(startDate__c))</errorConditionFormula>
    <errorDisplayField>startDate__c</errorDisplayField>
    <errorMessage>La date d&apos;application doit être renseignée.</errorMessage>
</ValidationRule>