force-app/main/default/objects/NRV10GridRevision__c/validationRules/VR_K3_GridRevision_DateDeFin.validationRule-meta.xml
<ValidationRule>
    <fullName>VR_K3_GridRevision_DateDeFin</fullName>
    <active>true</active>
    <description>Vérifie que la date de fin est postérieure à la date de début.</description>
    <errorConditionFormula>AND(!$User.ByPassValidationRule__c, endDate__c &lt; startDate__c)</errorConditionFormula>
    <errorDisplayField>endDate__c</errorDisplayField>
    <errorMessage>La date de fin d&apos;application en peut être antérieure à la date d&apos;application.</errorMessage>
</ValidationRule>