force-app/main/default/objects/NRV10GridRevision__c/validationRules/VR_K3_GridRevision_DefaultRate.validationRule-meta.xml
<ValidationRule>
    <fullName>VR_K3_GridRevision_DefaultRate</fullName>
    <active>true</active>
    <description>Validate that default rate is set for record type Sales and Team</description>
    <errorConditionFormula>AND(!$User.ByPassValidationRule__c, OR(RecordType.DeveloperName = &apos;salesCommission&apos;,RecordType.DeveloperName = &apos;teamCommission&apos;), ISBLANK(defaultRate__c))</errorConditionFormula>
    <errorDisplayField>defaultRate__c</errorDisplayField>
    <errorMessage>Le taux par défaut doit être renseigné pour ce type de grille</errorMessage>
</ValidationRule>