force-app/main/default/objects/NRV10GridRevision__c/validationRules/VR_K3_GridRevision_SalesRevisionDates.validationRule-meta.xml
<ValidationRule>
    <fullName>VR_K3_GridRevision_SalesRevisionDates</fullName>
    <active>true</active>
    <description>Vérifie que la révision de grille de commission de vente est disponible sur au moins une partie de la durée de validité de la révision de grille de contrat de travail</description>
    <errorConditionFormula>AND(!$User.ByPassValidationRule__c, RecordType.DeveloperName = &apos;workingContract&apos;, OR( AND(!ISBLANK(endDate__c), salesGridRevision__r.startDate__c &gt; endDate__c), AND(!ISBLANK(salesGridRevision__r.endDate__c), salesGridRevision__r.endDate__c &lt; startDate__c)))</errorConditionFormula>
    <errorDisplayField>salesGridRevision__c</errorDisplayField>
    <errorMessage>La commission de vente doit avoir au moins une partie de la durée de validité du contrat de travail en commun avec la révision de grille du contrat de travail.</errorMessage>
</ValidationRule>