force-app/main/default/objects/NRV10GridRevision__c/validationRules/VR_K3_GridRevision_TeamRevisionDates.validationRule-meta.xml
<ValidationRule>
    <fullName>VR_K3_GridRevision_TeamRevisionDates</fullName>
    <active>true</active>
    <description>Vérifie que la révision de grille de commission d&apos;équipe est disponible sur au moins une partie de la durée de validité de la révision de grille de contrat de travail</description>
    <errorConditionFormula>AND(!$User.ByPassValidationRule__c, RecordType.DeveloperName = &apos;workingContract&apos;, OR( AND(!ISBLANK(endDate__c), teamGridRevision__r.startDate__c &gt; endDate__c), AND(!ISBLANK(teamGridRevision__r.endDate__c), teamGridRevision__r.endDate__c &lt; startDate__c)))</errorConditionFormula>
    <errorDisplayField>teamGridRevision__c</errorDisplayField>
    <errorMessage>La commission d&apos;équipe doit avoir au moins une partie de la durée de validité du contrat de travail en commun avec la révision de grille du contrat de travail.</errorMessage>
</ValidationRule>