force-app/main/default/objects/NRV10GridRevision__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>RECORDTYPE</field>
        <operation>equals</operation>
        <value>NRV10GridRevision__c.workingContract</value>
    </filters>
    <label>Tout</label>
</ListView>