force-app/main/default/objects/NRV10GridRevision__c/listViews/Bonus_NRV10.listView-meta.xml
<ListView>
    <fullName>Bonus_NRV10</fullName>
    <columns>NAME</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>RECORDTYPE</field>
        <operation>equals</operation>
        <value>NRV10GridRevision__c.bonus</value>
    </filters>
    <label>04 - Bonus sur CA NRV10</label>
</ListView>