force-app/main/default/objects/NRV10GridRevision__c/listViews/Coefficients_d_decote_NRV10.listView-meta.xml
<ListView>
    <fullName>Coefficients_d_decote_NRV10</fullName>
    <columns>NAME</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>RECORDTYPE</field>
        <operation>equals</operation>
        <value>NRV10GridRevision__c.discountCommission</value>
    </filters>
    <label>02 - Coefficients de décote NRV10</label>
</ListView>