force-app/main/default/objects/NRV10GridRevision__c/listViews/Grilles_NRV10.listView-meta.xml
<ListView>
    <fullName>Grilles_NRV10</fullName>
    <columns>NAME</columns>
    <columns>startDate__c</columns>
    <columns>endDate__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>RECORDTYPE</field>
        <operation>equals</operation>
        <value>NRV10GridRevision__c.workingContract</value>
    </filters>
    <label>00 - Regroupement des grilles NRV10</label>
</ListView>