force-app/main/default/objects/NRV10GridRevision__c/listViews/Malus_financement_NRV10.listView-meta.xml
<ListView>
    <fullName>Malus_financement_NRV10</fullName>
    <columns>NAME</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>RECORDTYPE</field>
        <operation>equals</operation>
        <value>NRV10GridRevision__c.malus</value>
    </filters>
    <label>05 - Malus financement NRV10</label>
</ListView>