force-app/main/default/objects/NRV10GridRevision__c/listViews/Taux_de_vente_NRV10.listView-meta.xml
<ListView>
    <fullName>Taux_de_vente_NRV10</fullName>
    <columns>NAME</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>RECORDTYPE</field>
        <operation>equals</operation>
        <value>NRV10GridRevision__c.salesCommission</value>
    </filters>
    <label>01 - Taux de vente NRV10</label>
</ListView>