force-app/main/default/objects/NRV10GridRevision__c/listViews/Taux_quipe_NRV10.listView-meta.xml
<ListView>
    <fullName>Taux_quipe_NRV10</fullName>
    <columns>NAME</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>RECORDTYPE</field>
        <operation>equals</operation>
        <value>NRV10GridRevision__c.teamCommission</value>
    </filters>
    <label>03 - Taux équipe NRV10</label>
</ListView>